# Just_Decide

./: .editorconfig  .env.example  .gitignore  CHECKLIST.md  README.md  add_keywords.py  docker-compose.yml  knowledge_sources  package.json  questionnaire_agents.py  test.ipynb
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py
backend/app/chains/: __init__.py
backend/app/mcp_tools/: __init__.py
docs/: api_endpoints.md  architecture.md  full_guide.md  project_plan.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: page.tsx
frontend/src/hooks/: useEventSource.ts
